[project]
name = "anykap"
description = "A simple toolkit aiding capturing in Kubernetes Linux nodes"
requires-python = ">=3.9"
authors = [
    {name = "Ping He", email="tdihp@hotmail.com"},
]
readme = "README.md"
license = {text = "MIT License"}
dynamic = ["version"]
dependencies = [
  "pyyaml >= 6"
]

[tool.pytest.ini_options]
minversion = "7"
addopts = "-ra --ignore=tests/sync"
asyncio_mode = "auto"
testpaths = [
    "tests",
]

[project.scripts]
kubectl-anykap = "anykap.client:main"

[tool.hatch]

[tool.hatch.version]
path = "src/anykap/__init__.py"

[tool.hatch.envs.test]
dependencies = [
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-kubernetes",
  "azure-storage-blob",  # for testing azureblob
]

[[tool.hatch.envs.test.matrix]]
python = ["3.9", "3.10", "3.11", "3.12"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
