[project]
name = "anykap"
description = "Rule Based Observability in Kubernetes Nodes"
requires-python = ">=3.9"
authors = [
    {name = "Ping He", email="tdihp@hotmail.com"},
]
readme = "README.md"
license = {text = "MIT License"}
dynamic = ["version"]
dependencies = [
  "pyyaml >= 6"
]

[tool.pytest.ini_options]
minversion = "7"
addopts = "-ra"
asyncio_mode = "auto"
testpaths = [
    "tests",
]

[project.scripts]
kubectl-anykap = "anykap.client:main"

[tool.hatch]

[tool.hatch.version]
path = "src/anykap/__init__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-kubernetes",
  "azure-storage-blob",  # for testing azureblob
]

[[tool.hatch.envs.test.matrix]]
python = ["3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black",
  "ruff",
]

[tool.hatch.envs.lint.scripts]
lint = ["black --check --diff {args:.}", "ruff check {args:.}"]
format = ["black {args:.}", "ruff format {args:.}"]

[tool.hatch.envs.docs]
dependencies = [
  "sphinx ~= 7.2.6",
  "myst-parser ~= 2.0.0",
]

[tool.ruff]
target-version = "py39"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
